--- a/build.gradle
+++ b/build.gradle
@@ -75,6 +75,11 @@ project(":android") {
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86"
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86_64"
         
+        compile ('io.socket:socket.io-client:1.0.0') {
+	  	// excluding org.json which is provided by Android
+	  	exclude group: 'org.json', module: 'json'
+		}
+        
         compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
         natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-armeabi"
         natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-armeabi-v7a"
@@ -123,6 +128,8 @@ project(":core") {
 
 
     dependencies {
+    
+    	compile ('io.socket:socket.io-client:1.0.0')
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
