--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:theme="@style/GdxTheme" >
         <activity
             android:name="com.javakaian.game.AndroidLauncher"
-            android:label="@string/app_name" 
+            android:label="@string/app_name"
+            android:exported="true"
             android:screenOrientation="landscape"
             android:configChanges="keyboard|keyboardHidden|navigation|orientation|screenSize|screenLayout">
             <intent-filter>
