--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,8 @@
 buildscript {
-    
-
     repositories {
-        mavenLocal()
         mavenCentral()
         maven { url "https://plugins.gradle.org/m2/" }
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
-        jcenter()
         google()
     }
     dependencies {
@@ -15,18 +11,13 @@ buildscript {
 }
 
 allprojects {
-    apply plugin: "eclipse"
-
     version = '1.0'
     ext {
         appName = "OTD"
         gdxVersion = '1.9.10'
     }
-
     repositories {
-        mavenLocal()
         mavenCentral()
-        jcenter()
         google()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
@@ -37,9 +28,7 @@ project(":android") {
     apply plugin: "android"
 
     configurations { natives }
-
     dependencies {
-
         implementation project(path: ':desktop')
 
         api "com.badlogicgames.gdx:gdx-backend-android:$gdxVersion"
@@ -55,38 +44,25 @@ project(":android") {
         natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-arm64-v8a"
         natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-x86"
         natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-x86_64"
-        
     }
 }
 
 
 project(":desktop") {
     apply plugin: "java-library"
-
+    sourceSets.test.java.srcDirs = ["test/"]
     dependencies {
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
 		api "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         implementation "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
         implementation "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
-        
+
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
     }
-}
-
-project(":tests") {
-    apply plugin: "java"
-
-    sourceSets.test.java.srcDirs = ["src/"]
-
-    dependencies {
-
-        implementation project(path: ':desktop')
-
-        implementation "junit:junit:5.+"
-        implementation "org.mockito:mockito-all:1.9.+"
-
-        implementation "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
-        implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
-
+    test {
+        useJUnitPlatform()
     }
 }
