first unit test added !

--- a/build.gradle
+++ b/build.gradle
@@ -53,13 +53,14 @@ project(":desktop") {
     sourceSets.test.java.srcDirs = ["test/"]
     dependencies {
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
-		api "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
+        api "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         implementation "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
         implementation "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
 
         testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
         testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+        testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.2.4'
 
     }
     test {
